# ste-writing-coach-plugin

./: .chatgpt-write-check  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements-dev.txt
.github/workflows/: ci.yml
app/: __init__.py  engine.py  main.py  models.py  rewrite.py
app/data/: style_lexicon.json
config/: gpt_instructions.md  gpt_profile.json  openapi.yaml  privacy-policy.md
examples/: requests.http
scripts/: prepare_schema.py
tests/: test_api.py  test_engine.py
